--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </div>
     </div>
     <div class="confetti-container"></div>
-    <audio id="birthday-music" src="0714.mp3"></audio>
+    <audio id="birthday-music" src="0714.MP3"></audio>
 
     <style>
         .letter-image {
